--- a/Components/Pages/Blog.razor
+++ b/Components/Pages/Blog.razor
@@ -11,7 +11,7 @@
 {
     <div class="divide-y divide-gray-700">
         <div class="space-y-2 pb-8 pt-6 md:space-y-5">
-            <h1 class="font-sans md:leading-14 text-3xl font-extrabold leading-9 tracking-tight text-gray-100 sm:text-4xl sm:leading-10 md:text-6xl">Latest</h1>
+            <h1 class="font-sans md:leading-14 text-3xl font-extrabold leading-9 tracking-tight text-gray-100 sm:text-4xl sm:leading-10 md:text-6xl">Latest Posts</h1>
             <p class="text-lg leading-7 text-gray-400 prose prose-invert">@WebsiteKeys.BlogLead</p>
         </div>
 
